# MLSTEM2026-Summer-School

./: .gitignore  README.md  pyproject.toml
Day 1/: 0109 - Nano STEM HAADF Diffraction.emd  09AM_Electron_Optics.ipynb
Day 2/: 10AM_Acquire_CBED.ipynb  1PM_Analyze_CBED_Pattern.ipynb  3PM_Compressed_Sensing.ipynb  4PM_Hackathon_Digital_Twin.ipynb
Day 2/images/: CBED.pptx
Day 3/: 09AM_Introduction_Spectroscopy.ipynb  10AM_Acquire_EDS_Spectra.ipynb  11AM_Analyze_EDS.ipynb  3PM_Analyze_CoreLoss_EELS.ipynb  3PM_Analyze_LowLoss_EELS.ipynb  4PM_Hackaton3_VAE_EELS.ipynb  EELS_Linear_and_Clustering.ipynb
Day 3/example_data/: EELS_STO3.dm3
Day 4/: 2PM_Active_Drift_Correction  4PM_hackaton_Agentic_analysis.ipynb
